Optimize variable data

--- a/nim.cfg
+++ b/nim.cfg
@@ -1,5 +1,6 @@
 --d:release
---stackTrace:on
-#--lineTrace:on
---profiler:on
+#--stackTrace:on
+--lineTrace:on
+#--profiler:on
+--lineDir:on
 --gc:orc
