--- a/nim.cfg
+++ b/nim.cfg
@@ -1,6 +1,9 @@
---d:release
+# --d:release
 #--stackTrace:on
 --lineTrace:on
 #--profiler:on
+# --d:debug
+# --debugger:native
+# --debuginfo
 --lineDir:on
 --gc:orc
