--- a/nim.cfg
+++ b/nim.cfg
@@ -2,8 +2,8 @@
 #--stackTrace:on
 --lineTrace:on
 #--profiler:on
-# --d:debug
+--d:debug
 # --debugger:native
-# --debuginfo
+--debuginfo
 --lineDir:on
 --gc:orc
