--- a/nim.cfg
+++ b/nim.cfg
@@ -1,9 +1,9 @@
-# --d:release
+--d:release
 #--stackTrace:on
---lineTrace:on
+# --lineTrace:on
 #--profiler:on
-#--d:debug
+# --d:debug
 # --debugger:native
---debuginfo
---lineDir:on
+# --debuginfo
+# --lineDir:on
 --gc:orc
