Add web support

--- a/nim.cfg
+++ b/nim.cfg
@@ -1,8 +1,8 @@
---d:release
+# --d:release
 #--stackTrace:on
 # --lineTrace:on
 #--profiler:on
-# --d:debug
+--d:debug
 # --debugger:native
 # --debuginfo
 # --lineDir:on
