--- a/nim.cfg
+++ b/nim.cfg
@@ -1,9 +1,9 @@
 --d:release
-#--stackTrace:on
+# --stackTrace:on
 # --lineTrace:on
 #--profiler:on
 # --d:debug
 # --debugger:native
-# --debuginfo
-# --lineDir:on
+--debuginfo
+--lineDir:on
 --gc:orc
